--- a/LibraryModule/src/main/res/values/colors.xml
+++ b/LibraryModule/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorDivider">#1A961734</color>
     <color name="colorFullyTransparent">#00000000</color>
+    <color name="colorDarkGrey">#29000000</color>
 </resources>
