--- a/LibraryModule/src/main/res/menu/favorite_share_menu.xml
+++ b/LibraryModule/src/main/res/menu/favorite_share_menu.xml
@@ -10,6 +10,12 @@
         android:id="@+id/artikel_detail_toolbar_favorite"
         android:icon="@drawable/ic_favorite_black_24"
         android:title="@string/merken"
+        android:visible="true"
         app:showAsAction="always" />
-
+    <item
+        android:id="@+id/artikel_detail_toolbar_favorite_active"
+        android:icon="@drawable/ic_favorite_active_black_24"
+        android:title="@string/merken"
+        android:visible="false"
+        app:showAsAction="always" />
 </menu>
