--- a/LibraryModule/src/main/res/menu/standard_toolbar_menu.xml
+++ b/LibraryModule/src/main/res/menu/standard_toolbar_menu.xml
@@ -11,9 +11,9 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/toolbar_search_item"
-        android:actionViewClass="android.support.v7.widget.SearchView"
         android:icon="@drawable/ic_search_black_24"
         android:title="@string/suche"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="collapseActionView|always" />
+    <!-- android:actionViewClass="android.support.v7.widget.SearchView" -->
 </menu>
