--- a/LibraryModule/src/main/res/drawable/shadow_bottom.xml
+++ b/LibraryModule/src/main/res/drawable/shadow_bottom.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <gradient
                 android:angle="90"
-                android:startColor="@color/colorWhite"
+                android:startColor="@color/colorFullyTransparent"
                 android:endColor="@color/colorShadow"/>
             <corners android:radius="2dp" />
         </shape>
