--- a/LibraryModule/src/main/res/values/attrs.xml
+++ b/LibraryModule/src/main/res/values/attrs.xml
@@ -9,11 +9,9 @@
         <attr name="setMaxCollapsedLines" format="integer"/>
     </declare-styleable>
 
-    <declare-styleable name="ParallaxScroll">
-        <attr name="parallax_factor" format="float" />
-        <attr name="alpha_factor" format="float" />
-        <attr name="inner_parallax_factor" format="float" />
-        <attr name="parallax_views_num" format="integer" />
-        <attr name="circular_parallax" format="boolean" />
+    <declare-styleable name="ParallaxScrollView">
+        <attr name="parallaxFactor" format="float"/>
+        <attr name="innerParallaxFactor" format="float"/>
+        <attr name="numberOfViewsToParallax" format="integer"/>
     </declare-styleable>
 </resources>
