--- a/LibraryModule/src/main/res/values-sw700dp/dim.xml
+++ b/LibraryModule/src/main/res/values-sw700dp/dim.xml
@@ -6,6 +6,7 @@
     <dimen name="small_text">14sp</dimen>
     <dimen name="medium_text">16sp</dimen>
     <dimen name="large_text">38sp</dimen>
+    <dimen name="app_title_text">38sp</dimen>
     <dimen name="extra_large_text">72sp</dimen>
 
     <!-- layout -->
