[UPDATE] updated textstyles

--- a/LibraryModule/src/main/res/values/text_styles.xml
+++ b/LibraryModule/src/main/res/values/text_styles.xml
@@ -14,7 +14,7 @@
 
     <style name="Grundgesetz.Text.AppTitle" parent="Grundgesetz.Text.Large">
         <item name="android:fontFamily">@font/robotoslab_bold</item>
-        <item name="textSize">@dimen/app_title_text</item>
+        <item name="android:textSize">@dimen/app_title_text</item>
     </style>
 
     <style name="Grundgesetz.Text.Untertitel_Caption" parent="Grundgesetz.Text.Small">
