[UPDATE] updated Button

--- a/LibraryModule/src/main/res/values/attrs.xml
+++ b/LibraryModule/src/main/res/values/attrs.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="Button">
-        <attr name="setIcon" format="reference"/>
-        <attr name="setStyle" format="string"/>
+        <attr name="setIcon" format="reference" />
+        <attr name="setStyle" format="string" />
+        <attr name="smallText" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="ExpandableTextView">
-        <attr name="setMaxCollapsedLines" format="integer"/>
+        <attr name="setMaxCollapsedLines" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="ParallaxScrollView">
-        <attr name="parallaxFactor" format="float"/>
-        <attr name="innerParallaxFactor" format="float"/>
-        <attr name="numberOfViewsToParallax" format="integer"/>
+        <attr name="parallaxFactor" format="float" />
+        <attr name="innerParallaxFactor" format="float" />
+        <attr name="numberOfViewsToParallax" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="CornerTriangleView">
         <attr name="corner" format="enum">
-            <enum name="upLeft" value="0"/>
-            <enum name="upRight" value="1"/>
-            <enum name="downRight" value="2"/>
-            <enum name="downLeft" value="3"/>
+            <enum name="upLeft" value="0" />
+            <enum name="upRight" value="1" />
+            <enum name="downRight" value="2" />
+            <enum name="downLeft" value="3" />
         </attr>
-        <attr name="start_color" format="color"/>
-        <attr name="end_color" format="color"/>
-        <attr name="alpha" format="float"/>
-        <attr name="height_factor" format="float"/>
-        <attr name="width_factor" format="float"/>
+        <attr name="start_color" format="color" />
+        <attr name="end_color" format="color" />
+        <attr name="alpha" format="float" />
+        <attr name="height_factor" format="float" />
+        <attr name="width_factor" format="float" />
     </declare-styleable>
 </resources>
