--- a/LibraryModule/src/main/res/drawable/lexikon_search_result_item_background_pressed.xml
+++ b/LibraryModule/src/main/res/drawable/lexikon_search_result_item_background_pressed.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <stroke android:width="@dimen/stroke_thickness" android:color="@color/colorBurgundy"/>
             <padding
-                android:bottom="@dimen/stroke_thickness"/>
+                android:top="@dimen/stroke_thickness"/>
         </shape>
     </item>
     <!-- rectangle to hide the divider rectangle -->
