--- a/LibraryModule/src/main/res/values/dim.xml
+++ b/LibraryModule/src/main/res/values/dim.xml
@@ -122,4 +122,7 @@
     <item name="standard_parallaxFactor" format="float" type="dimen">1.3</item>
     <item name="standard_innerParallaxFactor" format="float" type="dimen">1.7</item>
 
+    <!-- corner triangle view -->
+    <item name="height_factor_smaller_triangle" format="float" type="dimen">0.5</item>
+
 </resources>
