--- a/LibraryModule/src/main/res/values/attrs.xml
+++ b/LibraryModule/src/main/res/values/attrs.xml
@@ -23,6 +23,7 @@
         <attr name="parallaxFactor" format="float" />
         <attr name="innerParallaxFactor" format="float" />
         <attr name="numberOfViewsToParallax" format="integer" />
+        <attr name="isTablet" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="CornerTriangleView">
