--- a/LibraryModule/src/main/res/values/text_styles.xml
+++ b/LibraryModule/src/main/res/values/text_styles.xml
@@ -15,6 +15,7 @@
     <style name="Grundgesetz.Text.AppTitle" parent="Grundgesetz.Text.Large">
         <item name="android:fontFamily">@font/robotoslab_bold</item>
         <item name="android:textSize">@dimen/app_title_text</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="Grundgesetz.Text.Untertitel_Caption" parent="Grundgesetz.Text.Small">
