--- a/LibraryModule/src/main/res/drawable/ic_favorite_active_black_24.xml
+++ b/LibraryModule/src/main/res/drawable/ic_favorite_active_black_24.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="20dp"
-        android:height="22dp"
-        android:viewportWidth="20.0"
-        android:viewportHeight="22.0">
+    android:width="20dp"
+    android:height="21dp"
+    android:viewportWidth="20.0"
+    android:viewportHeight="21.0">
     <path
-        android:pathData="M17,22c-0.2,0 -0.4,-0.1 -0.6,-0.2L10,17.2l-6.4,4.6c-0.4,0.3 -0.8,0.2 -1.2,0c-0.3,-0.3 -0.5,-0.7 -0.3,-1.1l2.8,-7.4L0.3,8.7C0,8.4 -0.1,8 0.1,7.6S0.6,7 1,7l6.3,0.1L9,0.7C9.1,0.3 9.5,0 10,0h0c0.4,0 0.8,0.3 1,0.7L12.8,7H19c0.4,0 0.8,0.2 0.9,0.6C20.1,8 20,8.4 19.7,8.7l-4.5,4.5l2.8,7.4c0.2,0.4 0,0.9 -0.3,1.1C17.4,21.9 17.2,22 17,22"
-        android:fillColor="#FF000000"/>
+        android:fillColor="@color/colorBlack"
+        android:pathData="M16.5,21c-0.1,0 -0.2,0 -0.3,-0.1l-6.2,-5l-6.2,5c-0.2,0.1 -0.4,0.1 -0.6,0S3,20.6 3,20.3l2.6,-8L0.2,7.9C0,7.8 0,7.5 0,7.3C0.1,7.1 0.3,7 0.5,7h6.9l2.2,-6.7c0.1,-0.4 0.8,-0.4 1,0L12.6,7h6.9c0.2,0 0.4,0.1 0.5,0.3c0.1,0.2 0,0.4 -0.2,0.6l-5.4,4.4l2.6,8c0.1,0.2 0,0.4 -0.2,0.6C16.7,21 16.6,21 16.5,21" />
 </vector>
