--- a/LibraryModule/src/main/res/values/dim.xml
+++ b/LibraryModule/src/main/res/values/dim.xml
@@ -7,6 +7,7 @@
     <dimen name="large_text">20sp</dimen>
     <dimen name="app_title_text">20sp</dimen>
     <dimen name="extra_large_text">72sp</dimen>
+    <item name="line_spacing_multiplier" format="float" type="dimen">1.2</item>
 
     <!-- layout -->
     <dimen name="layout_padding_right">16dp</dimen>
